Homework-3.0 fully completed - fixed alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,7 @@ p {
 .content-box {
 	width: 80%;
 	background-color: #FFF;
-	/*margin: 0 auto;
-	box-shadow: 2px 2px 6px #EDE275;*/
+	margin: 0 auto;
 }
 
 .logo {
